Fix heading typo in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1>Tic Tac Toe: Pagmumukha nyu 💜</h1>
+  <h1>Pic Tac Toe💜</h1>
 
   <div class="scoreboard">
     <div>Player X : <span id="scoreX">0</span></div>
@@ -41,3 +41,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
